# project-x

./: Cargo.toml  diesel.toml
config/: config.hjson  defaults.hjson
migrations/postgresql/2022-08-10-074714_create_posts/: down.sql
scripts/: run_local_postgres.sh
src/: error.rs  lib.rs  logging.rs  main.rs
src/api/: context.rs  mod.rs
src/api/graphql/: mod.rs
src/api/graphql/modules/: mod.rs
src/api/graphql/modules/devtools/: mod.rs
src/api/graphql/modules/devtools/mutations/: hello_mutation.rs  mod.rs
src/api/graphql/modules/devtools/queries/: hello_query.rs  mod.rs
src/api/graphql/modules/user/: mod.rs  user_query.rs  users_query.rs
src/api/identity/: mod.rs
src/config/: mod.rs  structs.rs
src/db/: mod.rs  utils.rs
src/db/models/: mod.rs  posts.rs
