[package]
name = "projectx"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]

# Logging
log = "0.4.17"
fern = "0.6.1"

# Graphql
async-graphql = { version = "4.0.3", features = ["log"]}
async-graphql-actix-web = "4.0.3"

# Web Server
actix-web = { version = "4.1.0", features = ["macros"]}

# Dotenv
dotenvy = "0.15.1"

# Async futures
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "fs", "io-util", "parking_lot", "time", "full"] }


# A safe, extensible ORM and Query builder
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"


# UUID generation
uuid = { version = "1.1.2", features = ["v4"] }


# JWT library
jsonwebtoken = "8.1.1"



# HTTP client
reqwest = { version = "0.11.11", features = ["stream", "json", "gzip", "brotli", "socks", "cookies", "trust-dns"] }


serde = { version = "1.0.136", features = ["derive"] }
deser-hjson = "1.0.2"
smart-default = "0.6.0"
url = { version = "2.2.2", features = ["serde"] }
once_cell = "1.13.0"
